<resources>
    <string name="app_name">CodeMART</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="action_forgot_password">Olvidaste la Contraseña?</string>
    <string name="email">Email</string>
    <string name="minimum_password">Clave demaciada corta, ingrese un minimo de 6 caracteres </string>
    <string name="auth_failed">Problemas de Autentificacion...</string>
    <string name="change_email">Actualizar email</string>
    <string name="change_password">Actualizar su password</string>
    <string name="send_passwrod_reset_email">Enviar correo electronico para actualizar PW</string>
    <string name="remove_user">Borrar Usuario</string>
    <string name="new_password">Nuevo Password</string>
    <string name="title_activity_profile">Perfil de Usuario</string>
    <string name="title_activity_login">Inicio de Session</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Clave de Acceso</string>
    <string name="hint_name">Nombre Completo</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_link_to_register">Crear Cuenta</string>
    <string name="btn_link_login">Ya tengo cuenta, iniciar session!!</string>

    <string name="txt_falta_email">debe ingresar un email!!</string>
    <string name="txt_falta_contraseña">debe ingresar una contraseña!!</string>
    <string name="txt_contraseña_muycorta">debe tener almenos 6 dgitos!!</string>
    <string name="txt_error_envioEmail">Error Al enviar el email</string>

    <string name="hint_new_email">nuevo Correo electronico</string>
    <string name="prompt_password">contraseña actual</string>
    <string name="new_pass">nueva contraseña</string>
    <string name="btn_change">Guardar Cambios</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_remove">Remover</string>
    <string name="send_password_reset_email">enviar para resetear contraseña</string>
    <string name="btn_sign_out">Cerrar Sesion</string>

    <string name="lbl_forgot_password">Olvidaste tu Contraseña</string>
    <string name="forgot_password_msg">olvide la contraseña</string>
    <string name="btn_reset_password">resetear contraseña</string>
    <string name="btn_back">Regresar</string>

    <string name="btn_forgot_password">olvide la contraseña</string>
    <string name="btn_link_to_login">ya tienen sesion, inicia aqui</string>


</resources>
