<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/colorPrimaryDark"
       android:gravity="center"
       android:orientation="vertical"
       android:padding="64dp">
    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:src="@mipmap/ic_launcher"
        />
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxLines="1"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputEditText>


       <android.support.design.widget.TextInputEditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <EditText
               android:id="@+id/txtPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_password"
               android:maxLines="1"
               android:textColor="@color/white"
               android:inputType="textPassword"
               android:focusableInTouchMode="true"/>
       </android.support.design.widget.TextInputEditText>

	<Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnSingn"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnResetpass"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorAccent"
            android:text="@string/action_forgot_password"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnIngresar"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/colorAccent"
            android:text="@string/btn_link_login"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
   </LinearLayout>
	
	<ProgressBar
            android:id="@+id/progresBar"
            android:layout_gravity="center|Button"
            android:layout_width="300dp"
            android:layout_height="30dp" />

</android.support.design.widget.CoordinatorLayout>